# neovim-config

./: .luarc.json  README.md  init.lua  lazy-lock.json
UltiSnips/: cpp.snippets  python.snippets  tex.snippets
after/ftplugin/: TelescopePrompt.lua  fennel.lua  tex.lua
after/syntax/: tex.vim
ftplugin/: cpp.lua  java.lua  neo-tree.lua  org.lua  snippets.lua  tex.lua  toggleterm.lua
lua/: basics.lua  dracula.vifm  journal.lua  keymappings.lua  plugins.lua  virtual-indent.lua
lua/plugin-config/: alpha.lua  barbar.lua  bufferline.lua  cokeline.lua  coq.lua  diffview.lua  feline.lua  formatter.lua  gitsigns.lua  hop.lua  indent-guide-lines.lua  jdtls.lua  lazygit.lua  lsp-install.lua  lsp-trouble.lua  lsp.lua  lspsaga.lua  lualine.lua  luasnip.lua  neoformat.lua  neovide.lua  null-ls.lua  nvim-autopairs.lua  nvim-cmp.lua  nvim-lint.lua  nvim-notify.lua  nvim-tree.lua  nvim-treesitter.lua  pears.lua  popup.lua  pydocstring.lua  renamer.lua  rust-tools.lua  search-box.lua  snippy.lua  symbols-outline.lua  tabout.lua  telescope.lua  todo-comments.lua  toggleterm.lua  (+7 more)
luasnippets/: all.lua  cpp.lua  lua.lua  org.lua  plantuml.lua  sql.lua  tex.lua
plugin/: packer_compiled.lua
queries/cpp/: indents.scm  injections.scm
snippets/: cpp.snippets  latex.snippets  lua.snippets  markdown.snippets  norg.snippets  plantuml.snippets  snippets.snippets  tex.snippets
spell/: en.utf-8.add  en.utf-8.add.spl  ru.utf-8.add  ru.utf-8.add.spl
syntax/: cpp.lua  org.lua
templates/cpp-cmake/: CMakeLists.txt
templates/cpp-conan/: CMakeLists.txt  conanfile.py
(+9 files in other folders)
